2007-01-14  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-expand-url): Fix for news.
	(mixi-news-cache): New variable.
	(mixi-make-news): New function.
	(mixi-news-url-regexp): New constant.
	(mixi-make-news-from-url): New function.
	(mixi-news-p): New macro.
	(mixi-news-page): Ditto.
	(mixi-news-title-regexp): New regexp.
	(mixi-news-media-regexp): Ditto.
	(mixi-news-media-time-regexp): Ditto.
	(mixi-news-content-regexp): Ditto.
	(mixi-realize-news): New function.
	(mixi-news-media-id): New accessor method.
	(mixi-news-id): Ditto.
	(mixi-news-media): Ditto.
	(mixi-news-time): Ditto.
	(mixi-news-title): Ditto.
	(mixi-news-content): Ditto.
	(mixi-news-set-media): Ditto.
	(mixi-news-set-time): Ditto.
	(mixi-news-set-title): Ditto.
	(mixi-news-set-content): Ditto.
	(mixi-news-category-list): New constant.
	(mixi-news-category-p): New macro.
	(mixi-news-category-id): New function.
	(mixi-news-list-page): New macro.
	(mixi-news-list-regexp): New regexp.
	(mixi-get-news): New function.

2007-01-12  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-search-diary-list-page): Fix typo.
	(mixi-search-community-list-page): Ditto.
	(mixi-search-bbs-list-page): Ditto.

2007-01-12  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-diary-list-regexp): Fix regexp.
	(mixi-get-diaries): Follow the change above.
	(mixi-diary-time): Ditto.
	(mixi-diary-title): Ditto.
	(mixi-new-diary-list-regexp): Fix regexp.
	(mixi-get-new-diaries): Follow the change above.
	(mixi-search-diary-list-regexp): Fix regexp.
	(mixi-search-diaries): Follow the change above.

2007-01-11  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-community-birthday-regexp): Follow the change of mixi.
	(mixi-community-owner-regexp): Ditto.
	(mixi-community-category-regexp): Ditto.
	(mixi-community-members-regexp): Ditto.
	(mixi-community-open-level-regexp): Ditto.
	(mixi-community-authority-regexp): Ditto.
	(mixi-community-description-regexp): Ditto.

2007-01-10  OHASHI Akira  <bg66@koka-in.org>
